# Wallet-API-MetaMit

./: .gitignore  README.md  add_column.py  app.py  build.sh  config.py  create_admin.py  create_tables.py  models.py  requirements.txt
Desktop/first mini app telgram/44444444444/kyc-verification-app-master/kyc-verification-app-cloudinary-integration/: .env.example  app.py  cert.pem  cloudinary_service.py  google_drive_service.py  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt  telegram_bot.py
Desktop/first mini app telgram/44444444444/kyc-verification-app-master/kyc-verification-app-cloudinary-integration/migrations/: add_chat_id.sql
Desktop/first mini app telgram/44444444444/kyc-verification-app-master/kyc-verification-app-cloudinary-integration/static/css/: style.css
Desktop/first mini app telgram/44444444444/kyc-verification-app-master/kyc-verification-app-cloudinary-integration/static/js/: main.js
Desktop/first mini app telgram/44444444444/kyc-verification-app-master/kyc-verification-app-cloudinary-integration/templates/: index.html  status.html
Desktop/first mini app telgram/44444444444/kyc-verification-app-master/kyc-verification-app-cloudinary-integration/templates/admin/: dashboard.html  login.html
data/: transactions.json
migrations/: add_status_columns.py  alembic.ini  env.py
migrations/versions/: add_is_confirmed_db.py  add_transaction_id_and_confirmation.py  initial_migration.py
templates/: admin_dashboard.html  api_docs.html  base.html  create_user.html  forward_sms_setup.html  index.html  login.html  wallet.html
(+154 files in other folders)
