[tool.poetry]
name = "kyc-verification-app"
version = "0.1.0"
description = "KYC Verification Application with Telegram Bot Integration"
authors = ["OpenHands <openhands@all-hands.dev>"]

[tool.poetry.dependencies]
python = "^3.11.7"
Flask = "2.2.5"
Flask-Cors = "4.0.0"
python-dotenv = "1.0.0"
Pillow = "10.0.0"
Flask-SQLAlchemy = "3.1.1"
psycopg2-binary = "2.9.9"
python-telegram-bot = "20.7"
nest-asyncio = "1.5.8"
requests = "2.31.0"
pyngrok = "7.0.0"
cloudinary = "1.37.0"
gunicorn = "21.2.0"
Werkzeug = "2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"